fix 2* justice league, more js

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div>
             <label><input type="checkbox" name="team" value="Avengers"> Avengers</label>
             <label><input type="checkbox" name="team" value="Justice League"> Justice League</label>
-            <label><input type="checkbox" name="team" value="Justice League"> Guardians Of The Galaxy</label>
+            <label><input type="checkbox" name="team" value="Guardians Of The Galaxy"> Guardians Of The Galaxy</label>
         </div>
         <label>
             Weaknesses
