--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <label>Hero name</label>
                 <div class="hint">Don't enter your real name here! 🤫</div>
                 <input type="text" name="hero_name" required>
-                <p class="error hidden">You must give us your alias</p>
+                <p class="hidden"></p>
             </div>
 
             <div class="form-group">
@@ -129,7 +129,7 @@
                 <textarea id="weapons" name="weapons"></textarea>
             </div>
 
-            <button class="btn">Save</button>
+            <button class="btn" name="submit">Save hero</button>
         </form>
 
         <button class="toggle">Toggle</button>
